UI in place along with header. Known Issue New Widget alignment

--- a/css/app_style.css
+++ b/css/app_style.css
@@ -59,6 +59,11 @@
 	width: 100%;
 	height: 10%;
 	border: 1px black solid;
+	font-size: 20px;
+	font-size: 20px;
+	font-weight: bold;
+	text-align: left;
+	display:table;
 	background-color: rgba(226, 199, 152, 0.38);
 }
 
@@ -129,7 +134,7 @@
 
 .global-header-background {
 	background-color: #3F4140;
-	color: #BFBFBF;
+	color: #FFFAFA;
 	font-size: 20px;
 	word-wrap: break-word;
 	text-align: center;
